Resolve scroll problem on mobile

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -8,12 +8,15 @@
 }
 
 body {
-  overflow-x: hidden;
   background: linear-gradient(to right, #129b8e, #2dd583);
   height: 100%;
   margin: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+
+.jumbo-wrapper {
+  overflow-x: hidden;
 }
 
 .cards-container {
